Updated home page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <!--💡UPDATE: Change the title to your name-->
     <title>Samad Shaikh | Data Analysis Portfolio</title> 
       
-    <!--💡UPDATE: Add your favicon here. You can generate one at realfavicongenerator.net-->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png">
-    <link rel="apple-touch-icon" href="/favicon-32x32.png">
-    
+    <!-- <💡UPDATE: Add your favicon here. You can generate one at realfavicongenerator.net -->
+    <!-- <link rel="icon" type="image/png" href="favicon-32x32.png">
+    <link rel="apple-touch-icon" href="favicon-32x32.png">  -->
+
+    <link rel="icon" href="favicon.ico?v=1">
+<link rel="apple-touch-icon" href="apple-touch-icon.png?v=1">
+
+
+
+
     <!-- Google Fonts for Elegant Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +35,7 @@
     <div class="container">
         <!--💡UPDATE: Change to your name and title-->
         <h1>Samad Shaikh</h1>
-        <p>Aspiring Data Analyst | Power BI | Statistical Analysis </p>
+        <p> Data Analyst | Power BI | Statistical Analysis </p>
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
             <a href="https://www.linkedin.com/in/samadsk317/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
