Updated Project Page

--- a/Project_1_assets/Revenue_Intelligence_Project.html
+++ b/Project_1_assets/Revenue_Intelligence_Project.html
@@ -168,11 +168,12 @@ header p {
 </header>
 
 <div class="gallery">
-    <img src="Product Performance Analysis.png" onclick="openLightbox(this.src)">
-    <img src="Sales Trend Analysis.png" onclick="openLightbox(this.src)">
-    <img src="Geographic and Promotional Impack.png" onclick="openLightbox(this.src)">
-    <img src="Performance Comparison between Periods.png" onclick="openLightbox(this.src)">
-    <img src="Sales Detail Explorer.png" onclick="openLightbox(this.src)">
+    <img src="Data Model.png" onclick="openLightbox(this.src)">
+    <img src="Top_bottom_analysis.png" onclick="openLightbox(this.src)">
+    <img src="Sales_Trend.png" onclick="openLightbox(this.src)">
+    <img src="Geographic_and_Promotional_Impactt.png" onclick="openLightbox(this.src)">
+    <img src="Performance_Comparison.png" onclick="openLightbox(this.src)">
+    <img src="Tabular_Analysis.png" onclick="openLightbox(this.src)">
 
 </div>
 
