--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             <div class="project-card">
                 <img src="assets/images/project-placeholder-2.jpg" alt="Project Two Preview">
                 <div class="project-card-content">
-                    <h3>Project Title Two</h3>
+                    <h3>Insurance Portfolio Analytics</h3>
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
                     <div class="project-buttons">
-                        <a href="[YOUR_GITHUB_PROJECT_URL]" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/samad-sk/Insurance-Portfolio-Analysis-Suite" target="_blank" class="btn">Documentation</a>
                         <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
