Updated root file

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
                     <div class="project-buttons">
                         <a href="https://github.com/samad-sk/Insurance-Portfolio-Analysis-Suite" target="_blank" class="btn">Documentation</a>
-                        <a href="[YOUR_LIVE_DASHBOARD_URL]" target="_blank" class="btn btn-secondary">View Dashboard</a>
+                        <a href="/Insurance_Project_assets/Insurance_Portfolio_Project.html" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
             </div>
