Updated root file

--- a/Insurance_Project_assets/Insurance_Portfolio_Project.html
+++ b/Insurance_Project_assets/Insurance_Portfolio_Project.html
@@ -160,10 +160,9 @@ header p {
 <body>
 
 <header>
-    <h1>Revenue Intelligence Analytics</h1>
+    <h1>Insurance Portfolio Analytics</h1>
     <p>
-        Interactive Power BI dashboard analyzing sales trends, profitability,
-        product performance, and discount effectiveness to support data-driven business decisions.
+      Interactive Power BI dashboard analyzing insurance portfolio performance, claim patterns, coverage exposure, and policy-level profitability to provide actionable risk and financial insights.
     </p>
 </header>
 
