--- a/Insurance_Project_assets/Insurance_Portfolio_Project.html
+++ b/Insurance_Project_assets/Insurance_Portfolio_Project.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Project - 1 | Revenue Intelligence Analytics</title>
+<title>Project - 2 | Insurance Portfolio Analytics</title>
 
 <style>
 
