--- a/Insurance_Project_assets/Insurance_Portfolio_Project.html
+++ b/Insurance_Project_assets/Insurance_Portfolio_Project.html
@@ -162,7 +162,7 @@ header p {
 <header>
     <h1>Insurance Portfolio Analytics</h1>
     <p>
-      Interactive Power BI dashboard analyzing insurance portfolio performance, claim patterns, coverage exposure, and policy-level profitability to provide actionable risk and financial insights.
+      Interactive Power BI report analyzing insurance portfolio performance, claim patterns, coverage exposure, and policy-level profitability to provide actionable risk and financial insights.
     </p>
 </header>
 
