--- a/Project_1_assets/Revenue_Intelligence_Project.html
+++ b/Project_1_assets/Revenue_Intelligence_Project.html
@@ -162,7 +162,7 @@ header p {
 <header>
     <h1>Revenue Intelligence Analytics</h1>
     <p>
-        Interactive Power BI dashboard analyzing sales trends, profitability,
+        Interactive Power BI report analyzing sales trends, profitability,
         product performance, and discount effectiveness to support data-driven business decisions.
     </p>
 </header>
