--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img src="assets/images/Project_Preview_1.jpg" alt="Project One Preview">
                 <div class="project-card-content">
                     <h3>Revenue Intelligence Analytics </h3>
-                    <p>Built an interactive business intelligence dashboard to monitor growth trends, profitability,comparative analysis and product performance.</p>
+                    <p>Built an interactive business intelligence report to monitor growth trends, profitability,comparative analysis and product performance.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
                         <a href="https://github.com/samad-sk/Revenue-Intelligence-Analytics" target="_blank" class="btn">View on GitHub</a>
@@ -99,10 +99,10 @@
 
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="assets/images/project-placeholder-2.jpg" alt="Project Two Preview">
+                <img src="assets/images/Project_Preview_2.jpg" alt="Project Two Preview">
                 <div class="project-card-content">
                     <h3>Insurance Portfolio Analytics</h3>
-                    <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
+                    <p>Developed an interactive Power BI Report to evaluate insurance portfolio performance and claim trends.</p>
                     <div class="project-buttons">
                         <a href="https://github.com/samad-sk/Insurance-Portfolio-Analysis-Suite" target="_blank" class="btn">Documentation</a>
                         <a href="/Insurance_Project_assets/Insurance_Portfolio_Project.html" target="_blank" class="btn btn-secondary">View Dashboard</a>
