--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3>Insurance Portfolio Analytics</h3>
                     <p>Developed an interactive Power BI Report to evaluate insurance portfolio performance and claim trends.</p>
                     <div class="project-buttons">
-                        <a href="https://github.com/samad-sk/Insurance-Portfolio-Analysis-Suite" target="_blank" class="btn">Documentation</a>
+                        <a href="https://github.com/samad-sk/Insurance-Portfolio-Analysis-Suite" target="_blank" class="btn">View on GitHub</a>
                         <a href="/Insurance_Project_assets/Insurance_Portfolio_Project.html" target="_blank" class="btn btn-secondary">View Dashboard</a>
                     </div>
                 </div>
